Closed Bug 1380341 Opened 8 years ago Closed 8 years ago

Assertion failure: NS_UsePrivateBrowsing(newChannel) == mRespectPrivacy

Categories

(Core :: Graphics: ImageLib, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: tcampbell, Assigned: aosmond)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file)

STR: 1) Build with assertions on. (I used --enable-optimize, --enable-debug) 2) Open a private browsing window 3) Log in to sso.mozilla.com and complete 2FA Expected: SSO portal loads as normal. Actual: Content process crashes with assertion failure at https://searchfox.org/mozilla-central/rev/31311070d9860b24fe4a7a36976c14b328c16208/image/imgLoader.cpp#2229 After tab crashes, subsequent attempts to load sso.mozilla.com in a new tab request in a null-deref at https://searchfox.org/mozilla-central/rev/31311070d9860b24fe4a7a36976c14b328c16208/image/imgLoader.cpp#2185.
Has STR: --- → yes
Component: DOM → ImageLib
Priority: -- → P3
Whiteboard: [gfx-noted]
Looks like nsContentUtils::IsInPrivateBrowsing returned the wrong value. The load group did not have any callbacks set, so it could not determine the private browsing state from it (assumed false). If it had continued on to check the channel, it would have gotten the correct value. I'll put together a patch which will fallback if it cannot get an explicit result from the load group.
Assignee: nobody → aosmond
This is related to bug 1302566. If/when that one relands, we will want to make sure we don't regress this bug.
See Also: → 1302566
Attachment #8885810 - Flags: review?(amarchesini)
Attachment #8885810 - Flags: review?(amarchesini) → review+
Pushed by aosmond@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/8843631f2926 Fallback on the document's channel to check private browsing status if the load group has no load context. r=baku
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: