Bug 1380341 - Fallback on the document's channel to check private browsing status if the load group has no load context.